usecase-1/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: web-app
  namespace: production

spec:
  replicas: 3

  selector:
    matchLabels:
      app: web
      tier: frontend

  template:
    metadata:
      labels:
        app: web
        tier: frontend

    spec:
      containers:
      - name: nginx-coba
        image: nginx:1.21
        ports:
        - containerPort: 80
