usecase-1/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: web-service
  namespace: production

spec:
  selector:
    app: web
    tier: frontend

  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
