usecase-1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: web-ingress
  namespace: production
  annotations:
    kubernetes.io/ingress.class: nginx

spec:
  rules:
  - host: "myapp.local"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-service
            port:
              number: 80
